# YOLOv8_Tensorrt

./: CMakeLists.txt  README.md  infer.cu  main.cpp  python_trt.py  v8_transform.py  yolo.hpp
